RESOLVED FIXED94535
Never notify of insertedIntoTree during document destruction.
https://bugs.webkit.org/show_bug.cgi?id=94535
Summary Never notify of insertedIntoTree during document destruction.
Elliott Sprehn
Reported 2012-08-20 15:16:46 PDT
Never notify of insertedIntoTree since we wouldn't notify of removed causing bugs if you get multiple inserted notifications and no removed.
Attachments
Patch (1.93 KB, patch)
2012-08-20 15:17 PDT, Elliott Sprehn
no flags
Patch (2.87 KB, patch)
2012-08-20 15:33 PDT, Elliott Sprehn
no flags
Elliott Sprehn
Comment 1 2012-08-20 15:17:54 PDT
Created attachment 159532 [details] Patch Never notify the renderer of insertedIntoTree during document destruction since we dont notify of willBeRemovedFromTree.
Elliott Sprehn
Comment 2 2012-08-20 15:33:05 PDT
Eric Seidel (no email)
Comment 3 2012-08-20 15:35:03 PDT
Comment on attachment 159539 [details] Patch Yup.
Abhishek Arya
Comment 4 2012-08-20 15:41:10 PDT
nice catch!
WebKit Review Bot
Comment 5 2012-08-20 17:45:33 PDT
Comment on attachment 159539 [details] Patch Clearing flags on attachment: 159539 Committed r126107: <http://trac.webkit.org/changeset/126107>
WebKit Review Bot
Comment 6 2012-08-20 17:45:36 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 7 2012-08-21 11:50:24 PDT
Comment on attachment 159539 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=159539&action=review > Source/WebCore/ChangeLog:12 > + No tests needed since this just closes holes related to future code. Will these tests be added together with future code?
Note You need to log in before you can comment on or make changes to this bug.