Never notify of insertedIntoTree during document destruction. https://bugs.webkit.org/show_bug.cgi?id=94535

Patch by Elliott Sprehn <esprehn@chromium.org> on 2012-08-20
Reviewed by Eric Seidel.

Never notify of insertedIntoTree during document destruction. Previously since we
avoid notifying of willBeRemovedFromTree it's possible we could have gotten several
insertedIntoTree notifications without ever being told we were removed.

No tests needed since this just closes holes related to future code.

* rendering/RenderObjectChildList.cpp:
(WebCore::RenderObjectChildList::appendChildNode): Never call insertedIntoTree during document destruction.
(WebCore::RenderObjectChildList::insertChildNode): Same.
* rendering/RenderRegion.cpp:
(WebCore::RenderRegion::attachRegion): Removed unneeded document destruction check.

Canonical link: https://commits.webkit.org/112346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126107 268f45cc-cd09-0410-ab3c-d52691b4dbfc